# agentseek

./: .dockerignore  .env.example  .gitignore  .mintignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.zh.md  bubseek.toml  docker-compose.yml  docs.json  entrypoint.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.agents/: README.md  mcp.json
.scratch-tutorial/my_bub_agent/: .env.example  Dockerfile  README.md  pyproject.toml
.scratch-tutorial/my_bub_agent/frontend/: .env.example  README.md  index.html  package.json  server.ts  vite.config.ts
.scratch-tutorial/my_bub_agent/src/my_bub_agent/: __init__.py  dev.py
contrib/agentseek-ag-ui/: README.md  pyproject.toml
contrib/agentseek-ag-ui/src/agentseek_ag_ui/: __init__.py  channel.py  config.py  plugin.py
contrib/agentseek-ag-ui/tests/: test_channel.py
contrib/agentseek-contextseek/: README.md  pyproject.toml
contrib/agentseek-contextseek/src/agentseek_contextseek/: __init__.py  config.py  plugin.py
contrib/agentseek-contextseek/tests/: test_config.py  test_plugin.py
contrib/agentseek-langchain/: README.md  pyproject.toml
contrib/agentseek-langchain/examples/: README.md  deepagents_dashscope.py  remote_agent_protocol.py
contrib/agentseek-langchain/examples/agentseek_langchain_examples/: __init__.py  minimal_runnable.py
contrib/agentseek-langchain/src/agentseek_langchain/: __init__.py  ag_ui.py  agent_protocol.py  api_cli.py  bridge.py  config.py  langgraph_client.py  loader.py  normalize.py  plugin.py  profiles.py  runnable_executor.py  shapes.py  spec.py  tape_recorder.py  tools.py
contrib/agentseek-langchain/tests/: conftest.py  test_agent_protocol.py  test_config.py  test_deepagents.py  test_examples.py  test_langgraph_client.py  test_loader.py  test_minimal_example.py  test_normalize.py  test_plugin.py  test_spec.py  test_tools.py
contrib/agentseek-observability/: README.md  pyproject.toml
contrib/agentseek-observability/src/agentseek_observability/: __init__.py  _patches.py  any_llm.py  bub.py  plugin.py  republic.py
contrib/agentseek-observability/tests/: test_agentseek_observability.py
contrib/agentseek-tapestore-oceanbase/: README.md  pyproject.toml
contrib/agentseek-tapestore-oceanbase/src/agentseek_tapestore_oceanbase/: __init__.py  oceanbase.py  plugin.py  store.py  vector_support.py
contrib/agentseek-tapestore-oceanbase/tests/: test_plugin.py  test_store.py
contrib/bubseek-marimo/: README.md  pyproject.toml
contrib/bubseek-marimo/src/bub_skills/marimo/references/: marimo-conventions.md
contrib/bubseek-marimo/src/bubseek_marimo/: channel.py  chat_store.py  notebooks.py
contrib/bubseek-marimo/src/bubseek_marimo/templates/: dashboard.py  index.py
contrib/bubseek-marimo/src/skills/marimo/: SKILL.md
contrib/bubseek-marimo/src/skills/marimo/references/: marimo-conventions.md
contrib/bubseek-marimo/tests/: test_marimo_e2e.py
templates/bub/default/{{cookiecutter.project_slug}}/: .env.example  Dockerfile  README.md  docker-compose.yml  duties.py  pyproject.toml
templates/bub/default/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/bub/default/{{cookiecutter.project_slug}}/frontend/: README.md  server.ts  vite.config.ts
templates/bub/default/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: dev.py
templates/deepagents/default/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml  requirements.txt
templates/deepagents/default/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  demo_binding.py  settings.py
templates/deepagents/ragflow-knowledge-qa/{{cookiecutter.project_slug}}/: .env.example  README.md  langgraph.json  pyproject.toml
templates/deepagents/ragflow-knowledge-qa/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/deepagents/ragflow-knowledge-qa/{{cookiecutter.project_slug}}/frontend/: .env.example
templates/deepagents/ragflow-knowledge-qa/{{cookiecutter.project_slug}}/frontend/src/: App.test.tsx  App.tsx  TodoList.tsx  ToolCallCard.test.tsx  ToolCallCard.tsx  styles.css
templates/deepagents/ragflow-knowledge-qa/{{cookiecutter.project_slug}}/uploads/: sample-policy.md
templates/langchain/agentic-rag-hybrid/{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
templates/langchain/agentic-rag-hybrid/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/agentic-rag-hybrid/{{cookiecutter.project_slug}}/docs/: hybrid-search-guide.md
templates/langchain/agentic-rag-hybrid/{{cookiecutter.project_slug}}/examples/: hybrid_cases.yml
templates/langchain/agentic-rag-hybrid/{{cookiecutter.project_slug}}/frontend/: package.json  vite.config.ts
templates/langchain/agentic-rag-hybrid/{{cookiecutter.project_slug}}/tests/: test_agent_tool.py  test_embeddings.py  test_hybrid.py  test_media.py  test_middleware.py  test_routes.py  test_sample_pack.py  test_seekdb_integration.py  test_settings.py
templates/langchain/agentic-rag-openvino/{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
templates/langchain/agentic-rag-openvino/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/agentic-rag-openvino/{{cookiecutter.project_slug}}/frontend/: .env.example  package.json  tsconfig.node.json
templates/langchain/cli-remote/{{cookiecutter.project_slug}}/: .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt
templates/langchain/cli-remote/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/default/{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
templates/langchain/default/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/default/{{cookiecutter.project_slug}}/frontend/: .env.example  README.md  index.html  package.json  vite.config.ts
(+599 files in other folders)
