[project]
name = "my_bub_agent"
version = "0.1.0"
description = "My Bub Agent — Bub-flavored AG-UI agent."
authors = [{ name = "Your Name" }]
requires-python = ">=3.12"
dependencies = [
    "agentseek",
    "agentseek-ag-ui",
]

[project.scripts]
serve = "my_bub_agent.dev:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]

agentseek = { path = "/home/shangzhuoran.szr/oceanbase/agentseek", editable = true }
agentseek-ag-ui = { path = "/home/shangzhuoran.szr/oceanbase/agentseek/contrib/agentseek-ag-ui", editable = true }
