[project]
name = "agentseek-langchain"
version = "0.1.0"
description = "LangChain Runnable adapter for agentseek"
readme = "README.md"
authors = [{ name = "Chojan Shang", email = "psiace@apache.org" }]
requires-python = ">=3.12"
dependencies = [
    "bub>=0.3.7",
    "langgraph-sdk>=0.3.13",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
deepagents = [
    "deepagents>=0.5.3",
    "langchain-openai>=0.3.0",
]

[project.entry-points."bub"]
langchain = "agentseek_langchain.plugin:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
includes = ["src/agentseek_langchain"]
