[project]
name = "agentseek-langchain"
version = "0.1.0"
description = "A Bub plugin that delegates model turns to a user-provided LangChain Runnable"
readme = "README.md"
authors = [{ name = "Chojan Shang", email = "psiace@apache.org" }]
requires-python = ">=3.12"
dependencies = [
    "bub>=0.3.7",
    "langchain-core>=0.3",
    "langgraph-sdk",
    "pydantic-settings>=2.0.0",
]

[project.entry-points.bub]
langchain = "agentseek_langchain.plugin:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
includes = ["src/agentseek_langchain"]
