[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — DeepAgents knowledge-base agent backed by RAGFlow."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "deepagents>=0.6.10,<0.7",
    "langchain-openai>=1.3,<2",
    "ragflow-sdk==0.26.4",
    "python-dotenv>=1.0",
    "langgraph-cli[inmem]>=0.4,<0.5",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
