[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — LangChain agentic hybrid RAG with image search, SeekDB, and developer comparison demos."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.20.0,<2.0.0",
    "fastapi>=0.115,<1.0",
    "httpx[socks]>=0.28",
    "langchain>=1.0",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-oceanbase[pyseekdb]>=0.1.0",
    "langchain-openai>=0.3",
    "langgraph-cli[inmem]>=0.4",
    "openai>=1.54,<2.0",
    "pydantic>=2.8,<3.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[project.scripts]
ingest-images = "{{ cookiecutter.project_slug }}.ingest:main"
hybrid-demo = "{{ cookiecutter.project_slug }}.demo:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
