[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — LangChain local RAG with OpenVINO models, served by langgraph dev."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "langchain>=1.0,<2",
    "langchain-community>=0.3,<1",
    "langchain-core>=1.0,<2",
    "langchain-huggingface>=1.0",
    "langchain-oceanbase>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph-cli[inmem]>=0.4",
    "optimum[openvino]>=1.19",
    "pypdf",
    "python-dotenv>=1.0",
    "requests",
    "sentence-transformers>=3.0",
]

[project.scripts]
ingest = "{{ cookiecutter.project_slug }}.ingest:main"
convert-models = "{{ cookiecutter.project_slug }}.convert_models:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
