[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — remote LangGraph CLI agent bridged through agentseek-langchain."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.12"
dependencies = [
    "agentseek-langchain",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph-cli[inmem]",
    "pydantic-settings>=2.0.0",
]
