[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — LangChain agent bound through agentseek-langchain."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.12"
dependencies = [
    "agentseek",
    "agentseek-cli",
    "agentseek-ag-ui",
    "agentseek-langchain",
    "copilotkit>=0.1.80",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
serve = "{{ cookiecutter.project_slug }}.dev:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
{% if cookiecutter._agentseek_source_path %}
agentseek = { path = "{{ cookiecutter._agentseek_source_path }}", editable = true }
agentseek-cli = { path = "{{ cookiecutter._agentseek_source_path }}/contrib/agentseek-cli", editable = true }
agentseek-ag-ui = { path = "{{ cookiecutter._agentseek_source_path }}/contrib/agentseek-ag-ui", editable = true }
agentseek-langchain = { path = "{{ cookiecutter._agentseek_source_path }}/contrib/agentseek-langchain", editable = true }
{% else %}
agentseek = { git = "{{ cookiecutter._agentseek_source_url }}" }
agentseek-cli = { git = "{{ cookiecutter._agentseek_source_url }}", subdirectory = "contrib/agentseek-cli" }
agentseek-ag-ui = { git = "{{ cookiecutter._agentseek_source_url }}", subdirectory = "contrib/agentseek-ag-ui" }
agentseek-langchain = { git = "{{ cookiecutter._agentseek_source_url }}", subdirectory = "contrib/agentseek-langchain" }
{% endif %}
