[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — DeepAgents bound through agentseek-langchain."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.12"
dependencies = [
    "agentseek-langchain",
    "deepagents>=0.5.3",
    "langchain-openai>=0.3.0",
    "pydantic-settings>=2.0.0",
]
